feat: database tweaks, add more handle function, fixed SQL queries join order and regen migration
